# auth_gateway

./: .env  .server.env  Dockerfile  docker-compose.yml  grpc_server.py  http_server.py  main.py  pyproject.toml  requirements.txt
api/v1/: api.py
api/v1/endpoints/: captcha.py  customer_apps.py  login.py  verify.py
core/: config.py  utils.py
schemas/: __init__.py  login.py  response.py  verify.py
service/client/customer/: __init__.py  customer_pb2_grpc.py
service/redis/: __init__.py
service/server/: auth.proto  auth_pb2.py  auth_pb2_grpc.py
